<resources>
    <string name="app_name">WhatsApp</string>
    <string name="digite_email">Digite seu e-mail</string>
    <string name="digite_senha">Digite sua senha</string>
    <string name="button_logar">Logar</string>
    <string name="text_cadastrar">Não tem conta? Cadastre-se</string>
    <string name="cadastrar_nome">Nome</string>
    <string name="cadastrar_email">E-mail</string>
    <string name="cadastrar_senha">Senha</string>
    <string name="button_cadastrar">Cadastrar</string>
    <string name="menu_pesquisar">Pesquisar</string>
    <string name="menu_configuracao">Configurações</string>
    <string name="menu_sair">Sair</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>